# worker

./: .dockerignore  .env.example  .gitignore  .gitmodules  AGENTS.md  Dockerfile  Dockerfile.context  Dockerfile.gpu  README.md  appspec.yml  docker-compose.yml  insert_demo_books.py  pyproject.toml  requirements.txt  test_insert.py
.github/: actionlint.yaml
alembic/: env.py
audit/: 2025-12-28 (80901611).md
docs/: bubble-binary-classifier-experiment-summary.ko.md  bubble-binary-classifier-implementation-plan.en.md  bubble-binary-classifier-implementation-plan.ko.md  bubble-binary-classifier-runbook.ko.md  catalog-erd.md  catalog-sync.md  dobong-ainara-catalog-load-report.md  dobong-ainara-selection-rationale.md  generate.ts  library-quality-indicators.md  library-selection-analysis.md  nowon-mvp-dev-runbook.md  omr_downscale_before_after_eval_template_en.md  omr_downscale_readme_ko.md  omr_downscale_risks_and_safeguards_en.md  omr_downscale_team_review_checklist_en.md  omr_recognition_downscale_handoff_en.md  otel.md  rect-roi-omr-baseline-implementation.en.md  rect-roi-omr-baseline-implementation.ko.md  scan-artifact-storage.md  seoul_library_analysis.ipynb
outputs/: result_nowon_shelf_demo_001.png.json  result_nowon_shelf_demo_002.png.json  result_nowon_shelf_real_002.jpg.json
scripts/: build.sh  collect_library.py  collect_nowon.py  docker-compose.yml  docker-entrypoint.sh  eda_nowon.py  extract_smoke_fixture.py  generate.sh  import_csv.py  load_library_excel.py  run_nowon_scan.py  run_worker_8001.cmd  run_worker_8001.py  sync_bubbles_to_label_studio.py  sync_nowon_catalog.py  update-hashes.sh
sqlacodegen_custom/: generators.py
tests/: conftest.py  test_api_client.py  test_auth.py  test_bastion.py  test_bubble_classifier.py  test_cache.py  test_config.py  test_consts.py  test_debug_dump.py  test_debug_sync.py  test_detection_evaluation_service.py  test_disk.py  test_fonts.py  test_health.py  test_loggers.py  test_main.py  test_matcher.py  test_models.py  test_ocr_field_parser.py  test_paths.py  test_processors_base.py  test_processors_init.py  test_processors_v1.py  test_profiler.py  test_scan_artifact_service.py  test_scan_worker.py  test_smoke_scan.py  test_spot.py  test_ssm.py  test_telemetry.py  test_text_render.py  test_types.py  test_util.py  test_video_frame_service.py  test_vision_ocr_selection.py  test_zxingcpp_integration.py
training/: README.md
web/: .dockerignore  .gitignore  AGENTS.md  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
worker/: auth.py  (+23 more)
(+324 files in other folders)
