[project]
name = "worker"
version = "0.1.0"
description = "QMR worker"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy[asyncio]>=2.0.41",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "opencv-contrib-python-headless>=4.12.0.88",
    "opencv-python-headless>=4.12.0.88",
    "zxing-cpp>=2.3.0",
    "uuid7-standard>=1.1.0",
    "pillow>=12.0.0",
    "sentry-sdk>=2.62.0",
    "fastapi[standard]>=0.127.0",
    "psycopg[binary]>=3.3.2",
    "aioboto3>=15.5.0",
    "aiofiles>=25.1.0",
    "pyjwt[crypto]>=2.10.1",
    "romav2",
    "cairosvg>=2.9.0",
    "opentelemetry-api>=1.41.1",
    "opentelemetry-sdk>=1.41.1",
    "opentelemetry-exporter-otlp-proto-http>=1.41.1",
    "scikit-learn>=1.8.0",
    "matplotlib>=3.10.9",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "opencv-python>=4.12.0.88",
    "ruff>=0.14.6",
    "types-aioboto3[essential,rds,ssm]>=15.5.0",
    "types-aiofiles>=25.1.0.20251011",
]
schema = [
    "inflect>=7.5.0",
    "psycopg[binary]>=3.3.2",
    "sqlacodegen>=3.1.1",
]
gpu = [
    "torch>=2.5.0",
    "torchvision>=0.20.0",
    "einops>=0.8.1",
]
test = [
    "aioresponses>=0.7.8",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "respx>=0.22.0",
]

[tool.uv.sources]
romav2 = { path = "vendor/romav2", editable = true }

[tool.uv]
override-dependencies = [
    "dataclasses; python_version < '3.7'",
]

[tool.ruff]
line-length = 180

[tool.mypy]
mypy_path = "stubs"
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["romav2", "romav2.*", "torch", "torch.*", "torchvision", "torchvision.*", "cairosvg", "cairosvg.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--tb=short -q"
markers = [
    "smoke: end-to-end smoke tests that exercise the real alignment pipeline (slow; require fixtures under tests/fixtures/smoke/)",
]

[tool.coverage.run]
source = ["worker"]
omit = [
    "worker/generated/*",
    "worker/main.py",
]

[tool.coverage.report]
exclude_lines = [
    "if TYPE_CHECKING:",
    "if __name__",
]

[tool.pyright]
stubPath = "stubs"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project.entry-points."sqlacodegen.generators"]
declarative_snake = "sqlacodegen_custom.generators:DeclarativeSnakeCaseGenerator"

[tool.setuptools.packages.find]
where = ["."]
include = ["sqlacodegen_custom*"]
